Finalização do Projeto: Calculadora IMC

--- a/logica-js-projeto_inicial/calcularIMC/index.html
+++ b/logica-js-projeto_inicial/calcularIMC/index.html
@@ -36,8 +36,8 @@
 
 
                 <div class="chute container__botoes">
-                    <button onclick="verificarChute()" class="container__botao">Calcular IMC</button>
-                    <button onclick="reiniciarJogo()" id="reiniciar" class="container__botao" disabled>Refazer Cálculo</button>
+                    <button onclick="pegadaDeDados()" class="container__botao">Calcular IMC</button>
+                    <button onclick="botaoRefazer()" id="reiniciar" class="container__botao" disabled>Refazer Cálculo</button>
                 </div>
             </div>
             <img src="./img/imcPeso.png.png " alt="Dois Jovens se olhando. Uma Sobrepeso e um malhado"
