Calculadora de Número Fatorial completa

--- a/logica-js-projeto_inicial/numeroFatorial/index.html
+++ b/logica-js-projeto_inicial/numeroFatorial/index.html
@@ -24,16 +24,13 @@
                 </div>
                 <input type="number" min="1" max="99999" class="container__input">
                 <div class="chute container__botoes">
-                    <button onclick="calcular()" class="container__botao">Chutar</button>
-                    <button onclick="calculeOutroNum()" id="reiniciar" class="container__botao" disabled>Novo jogo</button>
+                    <button onclick="calcular()" class="container__botao">Resultado</button>
+                    <button onclick="calcularOutroNum()" id="reiniciar" class="container__botao" disabled>Refazer Cálculo</button>
                 </div>
             </div>
-            <img src="./img/ia.png" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
+            <img src="./img/einstein-imac.png.png" alt="Uma pessoa olhando para a esquerda" class="container__imagem-pessoa" />
         </div>
     </div>
-
-
-
 
     <script src="app.js" defer></script>
 </body>
