--- a/logica-js-projeto_inicial/dolarReal/index.html
+++ b/logica-js-projeto_inicial/dolarReal/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@700&family=Inter:wght@400;700&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Calculadora de Número Fatorial</title>
+    <title>Calculadora de Dólar > Real</title>
 </head>
 
 <body>
